# CS_4355_Repository

./: README.md
Class_Work/Calculator_Project/PROJECT_ROOT/install/: calculator
Class_Work/Calculator_Project/PROJECT_ROOT/src/: calculator.cpp
Final Project Submission/WPL/: CMakeLists.txt
Final Project Submission/WPL/cmake/: LLVM.cmake
Final Project Submission/WPL/src/: wplc.cpp
Final Project Submission/WPL/src/codegen/: CodegenVisitor.cpp
Projects/Archive/SandboxProject/: aliases  wpl.ll
Projects/CalculatorFinal/: -.ll
Projects/CalculatorFinal/src/: CMakeLists.txt
Projects/CalculatorFinal/test/: CMakeLists.txt
Projects/CalculatorProject/PROJECT_ROOT/: CMakeCache.txt
Projects/CalculatorProject/grun/: Calculator.g4  Calculator.interp  Calculator.tokens  CalculatorLexer.interp  CalculatorLexer.java  CalculatorParser.java
Projects/TestLLVM/: isPrime.c  isPrime.ll
Projects/WPL/: AutomatedTesting.sh  README.md  WPLC.ll
Projects/WPL/cmake/: Utility.cmake
Projects/WPLProject/Conversion/: Conversion.h
Projects/WPLProject/Tests/: WPL2.g4
Projects/WPLProject/grun/: WPL.g4  WPL.interp  WPL.tokens  WPLBaseListener.java  WPLLexer.interp  WPLLexer.java  WPLListener.java  WPLParser.java
Projects/calculator-example1/PROJECT_ROOT/test/: CMakeLists.txt
Projects/calculator-example1/PROJECT_ROOT/test/lexparse/: parser_tests.cpp  scanner_tests 2.cpp  scanner_tests.cpp
Projects/calculator-example1/advanced/: AdvancedLexer.interp  AdvancedParser.java
Projects/calculator-example1/grun/: Calculator.interp  Calculator.tokens  CalculatorParser.java
(+77 files in other folders)
